Initial changes to make this theme my own

--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 /*   
-Theme Name: The HTML5 Reset Theme
+Theme Name: DL Redden Theme
 Theme URI: http://html5reset.org
 Description: A style-free theme to get you started on an HTML5-based Wordpress theme of your own.
-Author: Monkey Do!
-Author URI: http://monkeydo.biz
+Author: DL Redden
+Author URI: http://dlredden.com
 Version: 1
 */
 
